Security configuration modified